--- a/.github/workflows/verify-prod-env.yml
+++ b/.github/workflows/verify-prod-env.yml
@@ -18,11 +18,11 @@ jobs:
     name: Validate Production Environment Configuration
     runs-on: ubuntu-latest
     
-    # Only run on preview deployments or production pushes
+    # Only run on preview deployments or production pushes (skip forked PRs without secrets)
     if: |
       github.event_name == 'workflow_dispatch' ||
       github.ref == 'refs/heads/main' ||
-      (github.event_name == 'pull_request' && github.base_ref == 'main')
+      (github.event_name == 'pull_request' && github.base_ref == 'main' && github.event.pull_request.head.repo.fork != true)
     
     permissions:
       contents: read
