docs: Add production auth checklist and migration pre-restore guard
- Add PRODUCTION_AUTH_CHECKLIST.md with required env vars and troubleshooting
- Add pre-restore safety guard to finance PII migration script
- Production OTP always required (no bypass) - proper security
- Document SMS gateway configuration requirements
- Update env.example with OTP-related variables

--- a/env.example
+++ b/env.example
@@ -60,6 +60,13 @@ ALLOW_DEMO_LOGIN=false
 # Optional: override default demo passwords (comma-separated)
 # NEXTAUTH_DEMO_PASSWORDS=admin123,password123,Admin@123
 
+# Super Admin OTP bypass for development only (requires NODE_ENV=development)
+# In production, OTP is always required - configure SMS gateway properly
+# NEXTAUTH_SUPERADMIN_BYPASS_OTP=true
+
+# Super Admin fallback phone for OTP (when user has no phone configured)
+# NEXTAUTH_SUPERADMIN_FALLBACK_PHONE=+966500000000
+
 # Internal API secret for server-to-server authentication
 # This should be DIFFERENT from NEXTAUTH_SECRET (security best practice)
 
