--- a/env.example
+++ b/env.example
@@ -55,6 +55,13 @@ JWT_SECRET=
 # Generate: openssl rand -base64 32
 NEXTAUTH_SECRET=
 
+# ⚠️ CRITICAL FOR VERCEL/PROXIED DEPLOYMENTS:
+# Required to satisfy NextAuth host validation when running behind a reverse proxy.
+# Without this, /api/auth/session and /api/auth/csrf will return 500 errors.
+# Set to 'true' for Vercel, Cloudflare, AWS ALB, or any proxied deployment.
+# Self-hosted/direct origin deployments can leave this unset (defaults to false).
+AUTH_TRUST_HOST=true
+
 # Allow fallback demo logins (local smoke tests only)
 ALLOW_DEMO_LOGIN=false
 # Optional: override default demo passwords (comma-separated)
@@ -574,6 +581,15 @@ TEST_ADMIN_EMPLOYEE=
 # Used by expectAllowedWithBodyCheck() to validate org_id in API responses
 # This catches cross-tenant data leaks that status-only checks miss
 TEST_ORG_ID=
+
+# Public-facing org ID for unauthenticated routes (signup, forgot-password, etc.)
+# Create a dedicated "Public" organization in your database with limited permissions
+# This isolates public user data from internal tenant data
+PUBLIC_ORG_ID=
+
+# Default org ID fallback when no specific org context is available
+# Typically the same as PUBLIC_ORG_ID or a system-level organization
+DEFAULT_ORG_ID=
 
 # Optional: Bypass TEST_ORG_ID requirement for local development
 # When running E2E tests locally without TEST_ORG_ID, tests will fail by default
