feat(env): Add Vercel env alias support for cross-naming compatibility
- Add ENV_ALIASES mapping in lib/env.ts for Vercel naming conventions
- Support SENDGRID_API_KEY aliases: SEND_GRID, SEND_GRID_EMAIL_FIXZIT_TOKEN
- Support GOOGLE_CLIENT_SECRET alias: OAUTH_CLIENT_GOOGLE
- Update notification services to use getEnv() with alias support
- Document encryption keys and aliases in env.example

Vercel Environment Variables Verified:
- TWILIO_AUTH_TOKEN ✅
- TWILIO_ACCOUNT_SID ✅
- SEND_GRID_EMAIL_FIXZIT_TOKEN → SENDGRID_API_KEY (aliased)
- SEND_GRID → SENDGRID_API_KEY (aliased)
- GOOGLE_CLIENT_ID ✅
- OAUTH_CLIENT_GOOGLE → GOOGLE_CLIENT_SECRET (aliased)
- GOOGLE_MAPS_API_KEY ✅
- PII_ENCRYPTION_KEY → ENCRYPTION_KEY (already supported)
- ENCRYPTION_KEY ✅
- MONGODB_URI ✅

--- a/env.example
+++ b/env.example
@@ -227,10 +227,18 @@ NOTIFICATIONS_SMOKE_EMAIL=
 NOTIFICATIONS_SMOKE_PHONE=
 
 # Email (SendGrid, AWS SES, Mailgun)
+# The codebase supports multiple aliases for Vercel naming conventions:
+# - SENDGRID_API_KEY (preferred)
+# - SEND_GRID (Vercel legacy)
+# - SEND_GRID_EMAIL_FIXZIT_TOKEN (Vercel custom)
 SENDGRID_API_KEY=
 FROM_EMAIL=noreply@fixzit.sa
 
 # SMS (Twilio, Unifonic)
+# These must match exactly in Vercel:
+# - TWILIO_ACCOUNT_SID
+# - TWILIO_AUTH_TOKEN
+# - TWILIO_PHONE_NUMBER
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
@@ -283,6 +291,10 @@ INTERNAL_API_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 
 # Google OAuth credentials (get from Google Cloud Console)
+# The codebase supports multiple aliases for Vercel naming conventions:
+# - GOOGLE_CLIENT_ID (preferred)
+# - GOOGLE_CLIENT_SECRET (preferred)
+# - OAUTH_CLIENT_GOOGLE (Vercel legacy - maps to GOOGLE_CLIENT_SECRET)
 GOOGLE_CLIENT_ID=your_google_client_id_here.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 
@@ -297,6 +309,15 @@ LOG_HASH_SALT=
 # If not set, falls back to LOG_HASH_SALT, then to no salt (dev only)
 # Generate: openssl rand -hex 32
 MONITORING_HASH_SALT=
+
+# === SECURITY - PII ENCRYPTION ===
+# Required for encrypting sensitive financial data (bank accounts, salary info, etc.)
+# The codebase supports multiple aliases for Vercel naming conventions:
+# - ENCRYPTION_KEY (preferred)
+# - PII_ENCRYPTION_KEY (Vercel alternative)
+# Generate: openssl rand -hex 32 (must be exactly 64 hex characters = 32 bytes)
+ENCRYPTION_KEY=
+# PII_ENCRYPTION_KEY= (alias, only set one)
 
 # === OAUTH CONFIGURATION ===
 # Comma-separated list of allowed email domains for OAuth sign-in
