--- a/env.example
+++ b/env.example
@@ -55,6 +55,13 @@ JWT_SECRET=
 # Generate: openssl rand -base64 32
 NEXTAUTH_SECRET=
 
+# ⚠️ CRITICAL FOR VERCEL/PROXIED DEPLOYMENTS:
+# Required to satisfy NextAuth host validation when running behind a reverse proxy.
+# Without this, /api/auth/session and /api/auth/csrf will return 500 errors.
+# Set to 'true' for Vercel, Cloudflare, AWS ALB, or any proxied deployment.
+# Self-hosted/direct origin deployments can leave this unset (defaults to false).
+AUTH_TRUST_HOST=true
+
 # Allow fallback demo logins (local smoke tests only)
 ALLOW_DEMO_LOGIN=false
 # Optional: override default demo passwords (comma-separated)
@@ -220,10 +227,18 @@ NOTIFICATIONS_SMOKE_EMAIL=
 NOTIFICATIONS_SMOKE_PHONE=
 
 # Email (SendGrid, AWS SES, Mailgun)
+# The codebase supports multiple aliases for Vercel naming conventions:
+# - SENDGRID_API_KEY (preferred)
+# - SEND_GRID (Vercel legacy)
+# - SEND_GRID_EMAIL_FIXZIT_TOKEN (Vercel custom)
 SENDGRID_API_KEY=
 FROM_EMAIL=noreply@fixzit.sa
 
 # SMS (Twilio, Unifonic)
+# These must match exactly in Vercel:
+# - TWILIO_ACCOUNT_SID
+# - TWILIO_AUTH_TOKEN
+# - TWILIO_PHONE_NUMBER
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
@@ -276,6 +291,10 @@ INTERNAL_API_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 
 # Google OAuth credentials (get from Google Cloud Console)
+# The codebase supports multiple aliases for Vercel naming conventions:
+# - GOOGLE_CLIENT_ID (preferred)
+# - GOOGLE_CLIENT_SECRET (preferred)
+# - OAUTH_CLIENT_GOOGLE (Vercel legacy - maps to GOOGLE_CLIENT_SECRET)
 GOOGLE_CLIENT_ID=your_google_client_id_here.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 
@@ -290,6 +309,15 @@ LOG_HASH_SALT=
 # If not set, falls back to LOG_HASH_SALT, then to no salt (dev only)
 # Generate: openssl rand -hex 32
 MONITORING_HASH_SALT=
+
+# === SECURITY - PII ENCRYPTION ===
+# Required for encrypting sensitive financial data (bank accounts, salary info, etc.)
+# The codebase supports multiple aliases for Vercel naming conventions:
+# - ENCRYPTION_KEY (preferred)
+# - PII_ENCRYPTION_KEY (Vercel alternative)
+# Generate: openssl rand -hex 32 (must be exactly 64 hex characters = 32 bytes)
+ENCRYPTION_KEY=
+# PII_ENCRYPTION_KEY= (alias, only set one)
 
 # === OAUTH CONFIGURATION ===
 # Comma-separated list of allowed email domains for OAuth sign-in
@@ -574,6 +602,13 @@ TEST_ADMIN_EMPLOYEE=
 # Used by expectAllowedWithBodyCheck() to validate org_id in API responses
 # This catches cross-tenant data leaks that status-only checks miss
 TEST_ORG_ID=
+
+# ⚠️ REQUIRED FOR PUBLIC AUTH ROUTES (signup, forgot-password, reset-password, etc.)
+# Create a dedicated "Public" organization in your database for unauthenticated users.
+# This isolates public user data from internal tenant data.
+# The signup route WILL FAIL with 500 error if these are not set.
+PUBLIC_ORG_ID=
+DEFAULT_ORG_ID=
 
 # Optional: Bypass TEST_ORG_ID requirement for local development
 # When running E2E tests locally without TEST_ORG_ID, tests will fail by default
