feat(auth): implement Redis-backed OTP store for multi-instance deployments
Resolves the P2 split-brain OTP state issue in multi-instance/serverless
deployments (Vercel, K8s). OTP codes, rate limits, and sessions are now
stored in Redis when REDIS_URL is configured, with automatic fallback
to in-memory Maps for local/dev environments.

Key changes:
- Add lib/otp-store-redis.ts with Redis-backed stores using TTL expiry
- Refactor lib/otp-store.ts to use unified interface (sync wrappers)
- Document OTP_STORE_REDIS_URL in env.example

Features:
- Atomic rate limiting with Redis INCR + TTL
- JSON serialization for complex OTP data structures
- Key namespacing: otp:*, ratelimit:otp:*, otpsession:*
- Graceful fallback with production warning when Redis unavailable
- Backward-compatible sync Map-like interface for existing code
- Async stores (redisOtpStore, etc.) for new code

This ensures OTP verification works correctly across all instances
in distributed deployments, preventing authentication failures where
users on instance A couldn't verify OTPs sent from instance B.

--- a/env.example
+++ b/env.example
@@ -120,6 +120,12 @@ REDIS_URL=redis://localhost:6379
 REDIS_PASSWORD=
 REDIS_TTL=300
 
+# === OTP STORAGE (Multi-Instance) ===
+# OTP state (codes, sessions, rate limits) uses REDIS_URL by default.
+# For separate OTP Redis instance, set OTP_STORE_REDIS_URL.
+# When unset, OTP falls back to in-memory (single-instance only).
+# OTP_STORE_REDIS_URL=redis://localhost:6379
+
 # === BULLMQ (Background Jobs) ===
 # Uses Redis for queue storage
 BULLMQ_REDIS_HOST=localhost
