chore: Add test infrastructure improvements and refresh session states
Test Infrastructure:
- Add test:auth script to package.json for focused auth testing
- Add tests/stubs/ directory with lightweight test stubs for mocking
- Add app/api/auth/test/credentials-debug route for test authentication
- Add scripts/tsconfig.json for scripts compilation

E2E Test Improvements:
- Update Playwright setup for more robust authentication flow
- Add SKIP_PLAYWRIGHT/PW_SKIP_E2E env skip flags
- Regenerate test state files with fresh session tokens
- Improve test documentation in README-testing-notes.md

Cleanup:
- Delete 5 merged local branches
- All improvements verified with typecheck and lint

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "test:legacy": "vitest -c vitest.config.api.ts run",
     "test:models": "vitest -c vitest.config.models.ts run",
     "test:services": "pnpm exec vitest run tests/services",
+    "test:auth": "vitest -c vitest.config.api.ts run tests/api/auth/**/*.test.{ts,tsx}",
     "test:api": "vitest -c vitest.config.api.ts run",
     "test:watch": "vitest",
     "test:ci": "vitest run --bail 1",
