fix(vercel): Increase memory to 8GB and enable DISABLE_MONGODB_FOR_BUILD
- Increase NODE_OPTIONS heap size from 4GB to 8GB
- Add DISABLE_MONGODB_FOR_BUILD=true to prevent DB connections during build
- Should resolve Vercel build failures

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
   "outputDirectory": ".next",
   "build": {
     "env": {
-      "NODE_OPTIONS": "--max-old-space-size=4096"
+      "NODE_OPTIONS": "--max-old-space-size=8192",
+      "DISABLE_MONGODB_FOR_BUILD": "true"
     }
   },
   "github": {
