fix(vercel): Remove DISABLE_MONGODB_FOR_BUILD - blocked by next.config guardrails
The next.config.js has production guardrails that prevent DISABLE_MONGODB_FOR_BUILD
from being set in Vercel deployments. The build phase is already detected via
NEXT_PHASE === 'phase-production-build' in the codebase.

--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
   "outputDirectory": ".next",
   "build": {
     "env": {
-      "NODE_OPTIONS": "--max-old-space-size=8192",
-      "DISABLE_MONGODB_FOR_BUILD": "true"
+      "NODE_OPTIONS": "--max-old-space-size=8192"
     }
   },
   "github": {
