fix(contact): Validate contact phone in production, graceful fallback in UI
- Add production validation for NEXT_PUBLIC_CONTACT_PHONE (fail-fast)
- Remove placeholder phone number fallback
- Handle missing phone gracefully in About page UI
- Sanitize phone for tel: links
- Fix JSON-LD schema to use undefined instead of empty string
- Document env vars in env.example

Closes #151

--- a/env.example
+++ b/env.example
@@ -19,6 +19,10 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 BASE_URL=http://localhost:3000
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
+# Public contact details (surfaced on /about). Must be set in production.
+NEXT_PUBLIC_CONTACT_EMAIL=info@fixzit.com
+NEXT_PUBLIC_CONTACT_PHONE=
+
 # =============================================================================
 # CRITICAL: REQUIRED FOR PRODUCTION
 # =============================================================================
