fix(qa): Consistent 503 handling for DB/index failures in QA routes
QA Alert route fixes:
- Wrap ensureQaIndexes in dedicated try-catch returning 503 (not 500) on failure
- Add ensureQaIndexes call to GET handler for index/TTL guarantee on cold starts
- Update comment to reference ensureQaIndexes instead of migration script

QA Log route fixes:
- Same consistent 503 error handling pattern for ensureQaIndexes failures
- Both POST and GET now properly return 503 on index bootstrap failure

Test coverage:
- Added tests for ensureQaIndexes failure scenarios (503 responses)
- 35 QA route tests now passing

Resolves audit findings:
- Major: DB unavailability during preflight returned 500 instead of 503
- Minor: GET handler missing ensureQaIndexes call for index/TTL guarantees

--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -46,6 +46,11 @@ jobs:
         run: pnpm run lint
         # CRITICAL: Removed continue-on-error - lint failures must block PRs
 
+      - name: Ensure Mongo Indexes (idempotent)
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/fixzit' }}
+        run: pnpm tsx -e "import { createIndexes } from './lib/db/collections'; import { getDatabase } from './lib/mongodb-unified'; (async () => { await createIndexes(); try { const db = await getDatabase(); (db as any)?.client?.close?.(); } catch (_) {} })();"
+
       - name: Run RBAC v4.1 Tests
         run: |
           echo "🔒 Running STRICT v4.1 RBAC validation tests..."
