fix: Comprehensive QA routes sanitization with OTP improvements
- Enhanced OTP send error logging with detailed diagnostics
- Added SMS health check endpoint (/api/health/sms) for configuration diagnosis
- Fixed ModuleScope type re-export from navigation config
- Fixed getModuleSearchConfig return type assertion
- Updated communication-logger with normalizeUserId for demo/test users
- Standardized collection names and soft-delete guards across queries
- Fixed sellerId normalization for marketplace KPI queries
- Added orgId/org_id fallback for Souq services during migration
- All tests passing (36/36)

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "verify:mongo": "tsx scripts/mongo-check.ts",
     "verify:all": "npm run verify:prep && npm run build && concurrently -k -s first \"npm run start\" \"wait-on http://localhost:3000 && npm run verify:routes && npm run verify:api && npm run verify:mongo\"",
     "doctor": "npm run lint && npm run typecheck && npm run verify:all",
+    "test:search": "vitest -c vitest.config.api.ts run tests/unit/app/api/search/search-scope.test.ts",
     "test": "npm run test:production",
     "test:production": "npm run test:models && npm run test:e2e",
     "test:fast": "npm run test:ci",
