fix: consolidate tenant isolation and fix duplicate import
FIXES:
- app/api/souq/claims/route.ts: Remove duplicate COLLECTIONS import
- app/api/support/incidents/route.ts: Use computed tenantScope for insert/update
- app/api/support/incidents/route.ts: Set tenant context before SupportTicket.create
- app/api/auth/otp/verify/route.ts: Single org mismatch guard with OTP cleanup

CI:
- .github/workflows/*.yml: Added PUBLIC_ORG_ID, DEFAULT_ORG_ID, TEST_ORG_ID env vars

All typecheck and lint pass

--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -25,6 +25,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NODE_OPTIONS: --max-old-space-size=8192
+      PUBLIC_ORG_ID: ${{ secrets.PUBLIC_ORG_ID }}
+      DEFAULT_ORG_ID: ${{ secrets.DEFAULT_ORG_ID }}
+      TEST_ORG_ID: ${{ secrets.TEST_ORG_ID }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
