fix(security): CI mongo provisioning, tenant-scoped rate limits, health token dedup
MAJOR Issues Fixed:
- test-runner.yml: Add MongoDB service for createIndexes() and DB tests
- test-runner.yml: Use secrets with fallback for JWT_SECRET/NEXTAUTH_SECRET
- support/incidents: Add tenant scope to Redis rate limit key (STRICT v4.1)

MINOR Issues Fixed:
- health/route.ts: Strengthen DB check with actual collection query
- health/*: Deduplicate isAuthorizedInternal into shared health-token.ts

Verification:
- TypeScript: 0 errors
- ESLint: 0 errors
- Tests: 73/73 passed (incidents, qa/alert, qa/log)

--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -18,14 +18,30 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
+    
+    # MongoDB service for index creation and DB-bound tests
+    services:
+      mongodb:
+        image: mongo:7
+        env:
+          MONGO_INITDB_DATABASE: fixzit_test
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    
     env:
       NODE_ENV: test
       CI: true
-      # Test environment variables
-      JWT_SECRET: test-secret-key-for-ci-tests-minimum-32-characters
-      NEXTAUTH_SECRET: test-nextauth-secret-for-ci-tests-32-chars
+      # Auth secrets from GitHub Secrets (fallback to deterministic test values)
+      JWT_SECRET: ${{ secrets.JWT_SECRET_TEST || secrets.JWT_SECRET || 'test-secret-key-for-ci-tests-minimum-32-characters' }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET_TEST || secrets.NEXTAUTH_SECRET || 'test-nextauth-secret-for-ci-tests-32-chars' }}
       NEXTAUTH_URL: http://localhost:3000
       MONGODB_URI: mongodb://localhost:27017/fixzit_test
+      ALLOW_OFFLINE_MONGODB: 'false'
       PUBLIC_ORG_ID: ${{ secrets.PUBLIC_ORG_ID }}
       DEFAULT_ORG_ID: ${{ secrets.DEFAULT_ORG_ID }}
       TEST_ORG_ID: ${{ secrets.TEST_ORG_ID }}
