fix(health): deterministic DB liveness check with timeout + secure headers
Address health endpoint review findings:

1. DB liveness: All callers now get actual DB connectivity check via
   withTimeout (2s), preventing false positives from stale connections.
   Previously, only authorized callers triggered the DB ping.

2. Secure headers: Use createSecureResponse instead of raw NextResponse.json
   to align with other health endpoints (cache-control, security headers).

3. env.example: Document HEALTH_CHECK_TOKEN in monitoring section with
   usage notes for LB/monitor authentication.

4. Enhanced diagnostics: Authorized callers get memory RSS, version,
   and categorized DB status (connected/disconnected/error/timeout).

Typecheck clean, 26/26 tests passing.

--- a/env.example
+++ b/env.example
@@ -266,6 +266,14 @@ NOTIFICATIONS_TELEMETRY_WEBHOOK=
 NOTIFICATION_LOG_TTL_DAYS=90
 NOTIFICATION_DLQ_TTL_DAYS=30
 
+# === HEALTH CHECKS & MONITORING TOKENS ===
+# Token for authenticating health check requests from load balancers/monitors.
+# When set, health endpoints expose detailed diagnostics only to authorized callers.
+# Without this token, health endpoints return minimal status (safe for public probes).
+# Generate: openssl rand -hex 32
+# Used by: /api/health, /api/health/sms, /api/health/auth
+HEALTH_CHECK_TOKEN=
+
 # === MONITORING & OBSERVABILITY ===
 # Prometheus
 PROMETHEUS_PORT=9090
