--- a/.github/workflows/mongo-unwrap-typecheck.yml
+++ b/.github/workflows/mongo-unwrap-typecheck.yml
@@ -11,6 +11,8 @@ permissions:
 jobs:
   mongo-unwrap-typecheck:
     runs-on: ubuntu-latest
+    env:
+      NODE_OPTIONS: --max-old-space-size=8192
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
