--- a/env.example
+++ b/env.example
@@ -486,6 +486,11 @@ ASSET_ENABLED=true           # Asset Tracking module
 VENDOR_ENABLED=true          # Vendor Management module
 RFQ_ENABLED=true             # Request for Quote module
 SUPPORT_ENABLED=true         # Support Tickets module
+# Support public org for anonymous incident reporting (requires ENABLE_ANONYMOUS_INCIDENTS=true)
+# Must be a valid MongoDB ObjectId for an org that handles anonymous/public tickets
+SUPPORT_PUBLIC_ORG_ID=
+# Enable anonymous incident reporting (unauthenticated users can submit diagnostics)
+ENABLE_ANONYMOUS_INCIDENTS=false
 MARKETPLACE_ENABLED=true     # Marketplace module
 ATS_ENABLED=true             # Applicant Tracking System module
 
@@ -627,6 +632,9 @@ TEST_ORG_ID=
 # The signup route WILL FAIL with 500 error if these are not set.
 PUBLIC_ORG_ID=
 DEFAULT_ORG_ID=
+# Used by /api/support/incidents when ENABLE_ANONYMOUS_INCIDENTS=true to file tickets
+# under a safe public org scope. Set to the orgId of your "Public" org.
+SUPPORT_PUBLIC_ORG_ID=
 
 # Optional: Bypass TEST_ORG_ID requirement for local development
 # When running E2E tests locally without TEST_ORG_ID, tests will fail by default
