--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -1,3 +1,5 @@
+---
+# yamllint disable rule:line-length rule:truthy
 name: Agent Governor CI
 
 on:
@@ -61,7 +63,7 @@ jobs:
           echo "✅ RBAC tests passing"
 
       # Note: E2E tests are expensive and run separately in e2e-tests.yml workflow
-      
+
       - name: Build project
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
