fix(ci): Address OOM and timeout issues in CI workflows
Changes:
- test-runner.yml: Add NODE_OPTIONS=8192MB to fix typecheck OOM
- agent-governor.yml: Add pnpm store and Next.js build caching
- e2e-tests.yml: Increase NODE_OPTIONS from 4GB to 8GB, add 15min build timeout
- fixzit-quality-gates.yml: Add 5min timeout to fixzit-agent step
- cleanup-obsolete-users.mjs: Fix TypeScript syntax in .mjs file (CodeQL error)
  - Convert 'failures: string[]' to JSDoc '@type {string[]}'
  - Convert '(error as Error)' to '/** @type {Error} */ (error)'

Addresses:
- Test Runner: JavaScript heap OOM during typecheck
- Agent Governor: Build hanging at 'Creating optimized production build'
- E2E Tests: Build step cancelled after timeout
- Fixzit Quality Gates: fixzit-agent step timing out
- CodeQL: Syntax error in cleanup-obsolete-users.mjs

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -104,7 +104,7 @@ jobs:
           - 'Mobile:AR:Tenant'       # Mobile iOS self-service
 
     env:
-      NODE_OPTIONS: --max-old-space-size=4096
+      NODE_OPTIONS: --max-old-space-size=8192
       PLAYWRIGHT_CONFIG: tests/playwright.config.ts
       PW_WEB_SERVER: pnpm dev -- --hostname 0.0.0.0 --port 3000
       PW_WEB_PORT: 3000
@@ -172,6 +172,7 @@ jobs:
           echo "✅ All 41 RBAC tests passing"
 
       - name: Build app (for E2E tests)
+        timeout-minutes: 15
         env:
           NODE_ENV: test
           SKIP_ENV_VALIDATION: 'true'
