--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -122,6 +122,7 @@ jobs:
 
       - name: Fixzit Agent (dry, full similarity)
         shell: bash
+        timeout-minutes: 5
         run: node scripts/fixzit-agent.mjs --report --port 3000 --keepAlive=false --limit=0
 
       - name: Delta & Regression checks
