--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 50 --ignore-pattern '.next/**' --ignore-pattern 'public/**' --ignore-pattern '_artifacts/**' --ignore-pattern 'deployment/**' --ignore-pattern 'playwright-report/**' --ignore-pattern 'e2e-test-results/**' --ignore-pattern 'qa/**' --ignore-pattern 'scripts/**' --ignore-pattern 'tools/**' --ignore-pattern 'tests/playwright-report/**'",
     "lint:prod": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --max-warnings 0 --report-unused-disable-directives",
     "lint:prod:fix": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --fix",
+    "lint:inventory-org": "tsx scripts/lint-inventory-orgid.ts",
     "lint:mongo-unwrap": "node tools/check-mongo-unwrap.js",
     "lint:prod:baseline": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --format json -o _artifacts/eslint-baseline.json",
     "lint:scripts": "eslint scripts tools --ext .ts,.tsx,.js,.jsx",
     "lint:collections": "node scripts/lint-collections.js",
-    "lint:ci": "npm run lint:prod && npm run rbac:client:check && npm run lint:rbac && npm run typecheck",
+    "lint:ci": "npm run lint:prod && npm run lint:inventory-org && npm run rbac:client:check && npm run lint:rbac && npm run typecheck",
     "lint:next": "next lint",
     "lint:rtl": "node scripts/check-rtl-logical.js",
     "lint:rbac": "npx tsx scripts/lint-rbac-parity.ts",
@@ -291,7 +292,7 @@
     }
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint:prod && pnpm guard:fm-hooks && bash scripts/security/check-hardcoded-uris.sh",
+    "pre-commit": "pnpm lint:prod && pnpm lint:inventory-org && pnpm guard:fm-hooks && bash scripts/security/check-hardcoded-uris.sh",
     "pre-push": "pnpm lint:mongo-unwrap && pnpm typecheck"
   }
 }
