fix(notifications): add orgId to remaining notification producers
COMPREHENSIVE AUDIT - System-wide search for notification gaps:

1. REFUND PROCESSOR (services/souq/claims/refund-processor.ts):
   - Added orgId to RefundRequest interface
   - Added orgId to Refund type for persistence
   - Updated notifyRefundStatus to include orgId in souq-claim-refund-status job
   - Updated bulk claims route to pass orderOrgId when processing refunds

2. AUTO-REPRICER SERVICE (services/souq/auto-repricer-service.ts):
   - Added orgId (from seller) to price_change_notification job
   - Enables tenant-specific notification routing for price changes

3. CODE CLEANUP:
   - Removed unused mongoose import from approve route

4. VERIFICATION:
   - Confirmed claims decision route already has server-side refund cap ✓
   - Confirmed returns-service notifications already have orgId ✓
   - Confirmed seller-kyc-service notifications already have orgId ✓
   - Confirmed account-health-service notifications already have orgId ✓
   - Confirmed budget-manager notifications already have orgId ✓

All notification producers now include tenant context for:
- Tenant-specific email/SMS templates and branding
- Proper audit trails in multi-tenant environment
- Correct notification routing

Verification: pnpm typecheck && pnpm lint pass with 0 errors

--- a/env.example
+++ b/env.example
@@ -117,6 +117,17 @@ SOUQ_FEATURE_SPONSORED_PRODUCTS=false
 SOUQ_FEATURE_AUTO_REPRICER=false
 SOUQ_FEATURE_REVIEWS_QA=false
 
+# === RETURNS / RMA ===
+# Base URL for generating return labels (per-environment; avoids hard-coded prod host)
+RETURN_LABEL_BASE_URL=http://localhost:3000
+# Origin address for return shipments (override per region/tenant as needed)
+RETURN_ORIGIN_NAME=Fixzit Returns Center
+RETURN_ORIGIN_STREET=123 Warehouse St
+RETURN_ORIGIN_CITY=Riyadh
+RETURN_ORIGIN_STATE=Riyadh Province
+RETURN_ORIGIN_POSTAL_CODE=11564
+RETURN_ORIGIN_COUNTRY=SA
+
 # === REDIS (Caching & Job Queues) ===
 # Development: redis://localhost:6379
 # Production: Use managed Redis (AWS ElastiCache, Redis Cloud)
