fix(souq): Meilisearch tenant isolation & RBAC (STRICT v4.1)
- Add orgId to sellers index filterableAttributes for tenant-safe search
- Change products/sellers index primaryKey to composite 'id' (orgId_fsin/orgId_sellerId)
- Update deleteFromIndex to use composite key for tenant-safe deletion
- Add id field to transform methods with composite orgId_key format
- Implement scoped deleteDocumentsByFilter for org-specific reindexing
- Reject org-less documents in transform methods with error logging
- Add MEILI_HOST and MEILI_MASTER_KEY to secrets.json
- Add RBAC role check to campaigns/[id]/stats route
- Fix TypeScript narrowing in search-index-jobs.ts

STRICT v4.1 Compliance:
- Cross-tenant data exposure risk eliminated
- Scoped reindex prevents wiping other tenants' data
- All ads routes now enforce role-based access control

Closes issues: Meilisearch tenant isolation, RBAC enforcement, secrets alignment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,59 @@
   "problems.autoReveal": true,
   "github-actions.workflows.pinned.workflows": [],
   "github-actions.workflows.pinned.refresh.enabled": false,
+  "github-actions.org-features": true,
+  "github-actions.remote-name": "origin",
+  "github-actions.workflows.validation.enabled": true,
+  "github-actions.workflows.secrets": [
+    "AUTH_SECRET",
+    "BULLMQ_REDIS_URL",
+    "DEFAULT_ORG_ID",
+    "GITHUB_TOKEN",
+    "GOOGLE_CLIENT_ID",
+    "GOOGLE_CLIENT_SECRET",
+    "HEALTH_CHECK_TOKEN",
+    "JWT_SECRET",
+    "JWT_SECRET_TEST",
+    "MONGODB_URI",
+    "NEXTAUTH_SECRET",
+    "NEXTAUTH_SECRET_TEST",
+    "NEXTAUTH_URL",
+    "OPENAI_KEY",
+    "PAYTABS_PROFILE_ID",
+    "PAYTABS_SERVER_KEY",
+    "PUBLIC_ORG_ID",
+    "REDIS_URL",
+    "RENOVATE_TOKEN",
+    "SENTRY_AUTH_TOKEN",
+    "SENTRY_ORG",
+    "SENTRY_PROJECT",
+    "STORE_PATH",
+    "TEST_ADMIN_EMAIL",
+    "TEST_ADMIN_EMPLOYEE",
+    "TEST_ADMIN_PASSWORD",
+    "TEST_FINANCE_OFFICER_EMAIL",
+    "TEST_FINANCE_OFFICER_EMPLOYEE",
+    "TEST_FINANCE_OFFICER_PASSWORD",
+    "TEST_HR_OFFICER_EMAIL",
+    "TEST_HR_OFFICER_EMPLOYEE",
+    "TEST_HR_OFFICER_PASSWORD",
+    "TEST_OPERATIONS_MANAGER_EMAIL",
+    "TEST_OPERATIONS_MANAGER_EMPLOYEE",
+    "TEST_OPERATIONS_MANAGER_PASSWORD",
+    "TEST_ORG_ID",
+    "TEST_SUPPORT_AGENT_EMAIL",
+    "TEST_SUPPORT_AGENT_EMPLOYEE",
+    "TEST_SUPPORT_AGENT_PASSWORD",
+    "TEST_SUPPORT_AGENT_USER_ID",
+    "TEST_TEAM_MEMBER_EMAIL",
+    "TEST_TEAM_MEMBER_EMPLOYEE",
+    "TEST_TEAM_MEMBER_PASSWORD",
+    "TEST_TEAM_MEMBER_USER_ID",
+    "ZATCA_API_KEY",
+    "ZATCA_SELLER_ADDRESS",
+    "ZATCA_SELLER_NAME",
+    "ZATCA_VAT_NUMBER"
+  ],
   "yaml.schemas": {
     "https://json.schemastore.org/github-workflow.json": ".github/workflows/*.yml"
   },
