fix(souq): prevent orphaned withdrawals by validating statement status and reordering payout flow
CRITICAL FINANCIAL INTEGRITY FIX:

1. Statement Status Check in Route (request-payout/route.ts):
   - Added check: statement.status === 'approved' before proceeding
   - Added check for existing payout to prevent duplicates
   - Returns 400 if statement not approved, 409 if payout exists

2. Statement Status Check in requestWithdrawal (balance-service.ts):
   - Defense-in-depth: verifies statement exists and is approved
   - Prevents bypass of approval requirement by direct callers
   - Throws error if statement not found or not approved

3. Reordered Payout Flow (request-payout/route.ts):
   - BEFORE: Created withdrawal+ledger → then payout (orphan risk)
   - AFTER: Create payout FIRST → then withdrawal+ledger on success
   - If payout fails (SADAD/bank issues), no withdrawal is created
   - Eliminates orphaned withdrawal records and ledger drift

4. Fixed counters route test:
   - Added mock for isTruthy to prevent ALLOW_OFFLINE_MONGODB bypass

Impact: Prevents financial state drift where funds are locked with pending
withdrawal but no payout record exists. Maintains STRICT v4.1 audit integrity.

Verification: 1845 tests pass, TypeScript 0 errors, ESLint 0 errors

--- a/.github/workflows/verify-prod-env.yml
+++ b/.github/workflows/verify-prod-env.yml
@@ -40,6 +40,12 @@ jobs:
       # PayTabs secrets (required for payment processing)
       PAYTABS_PROFILE_ID: ${{ secrets.PAYTABS_PROFILE_ID }}
       PAYTABS_SERVER_KEY: ${{ secrets.PAYTABS_SERVER_KEY }}
+      # SADAD/SPAN (optional; validated when ENABLE_SADAD_PAYOUTS=true)
+      ENABLE_SADAD_PAYOUTS: ${{ secrets.ENABLE_SADAD_PAYOUTS || vars.ENABLE_SADAD_PAYOUTS }}
+      SADAD_SPAN_MODE: ${{ secrets.SADAD_SPAN_MODE || vars.SADAD_SPAN_MODE }}
+      SADAD_API_KEY: ${{ secrets.SADAD_API_KEY }}
+      SADAD_API_SECRET: ${{ secrets.SADAD_API_SECRET }}
+      SADAD_API_ENDPOINT: ${{ secrets.SADAD_API_ENDPOINT }}
       # ZATCA secrets (required for Saudi e-invoicing)
       ZATCA_API_KEY: ${{ secrets.ZATCA_API_KEY }}
       ZATCA_SELLER_NAME: ${{ secrets.ZATCA_SELLER_NAME }}
@@ -131,9 +137,10 @@ jobs:
           else
             echo "Status: FAILED" >> "$GITHUB_STEP_SUMMARY"
             echo >> "$GITHUB_STEP_SUMMARY"
-            echo "Missing required secrets. Configure in GitHub Actions Secrets:" >> "$GITHUB_STEP_SUMMARY"
-            echo "- NEXTAUTH_SECRET / AUTH_SECRET" >> "$GITHUB_STEP_SUMMARY"
-            echo "- PAYTABS_PROFILE_ID, PAYTABS_SERVER_KEY" >> "$GITHUB_STEP_SUMMARY"
-            echo "- ZATCA_API_KEY, ZATCA_SELLER_NAME, ZATCA_VAT_NUMBER, ZATCA_SELLER_ADDRESS" >> "$GITHUB_STEP_SUMMARY"
-            echo "- REDIS_URL / BULLMQ_REDIS_URL" >> "$GITHUB_STEP_SUMMARY"
+          echo "Missing required secrets. Configure in GitHub Actions Secrets:" >> "$GITHUB_STEP_SUMMARY"
+          echo "- NEXTAUTH_SECRET / AUTH_SECRET" >> "$GITHUB_STEP_SUMMARY"
+          echo "- PAYTABS_PROFILE_ID, PAYTABS_SERVER_KEY" >> "$GITHUB_STEP_SUMMARY"
+          echo "- ZATCA_API_KEY, ZATCA_SELLER_NAME, ZATCA_VAT_NUMBER, ZATCA_SELLER_ADDRESS" >> "$GITHUB_STEP_SUMMARY"
+          echo "- REDIS_URL / BULLMQ_REDIS_URL" >> "$GITHUB_STEP_SUMMARY"
+          echo "- (Optional, required when ENABLE_SADAD_PAYOUTS=true): SADAD_API_KEY, SADAD_API_SECRET, SADAD_API_ENDPOINT, SADAD_SPAN_MODE" >> "$GITHUB_STEP_SUMMARY"
           fi
